fix padding issue on mobile

--- a/src/app/landing-modal/landing-modal.component.css
+++ b/src/app/landing-modal/landing-modal.component.css
@@ -26,7 +26,7 @@ a {
 @media (max-width: 400px) {
     .modal {
         padding-top: 20%;
-        padding-bottom: 20%;
+        padding-bottom: 35%;
     }
 }
 
